Try and change the path -
Seems like `.` is where the script is called from

--- a/snaps/install
+++ b/snaps/install
@@ -1,6 +1,6 @@
 #!/bin/env bash
 
 function install_snaps {
-    source ./packages
+    source ./snaps/packages
     snap install "${snap_packages[@]}"
 }
