--- a/python/install
+++ b/python/install
@@ -1,7 +1,7 @@
 #!/bin/env bash
 
 function install_python_libs {
-    source ./packages
+    source ./python/packages
 
     pip install "${python_plugins[@]}"
 }
