--- a/ruby/install
+++ b/ruby/install
@@ -1,7 +1,7 @@
 #!/bin/env bash
 
 function install_ruby_packages {
-    source ./packages
+    source ./ruby/packages
 
     gem install "${ruby_packages[@]}"
 }
