Change how `--classic` is called

--- a/snaps/install
+++ b/snaps/install
@@ -2,5 +2,9 @@
 
 function install_snaps {
     source ./snaps/packages
-    snap install "${snap_packages[@]}" --classic
+
+    for package in "${snap_packages[@]}"
+    do
+        snap install "${package}"
+    done
 }
