--- a/snaps/install
+++ b/snaps/install
@@ -7,9 +7,9 @@ function install_snaps {
     do
         if [ "${is_a_classic_package[$package_index]}" = true ]
         then
-            snap install "${snap_package[$package_index]} --classic"
+            snap install "${snap_packages[$package_index]} --classic"
         else
-            snap install "${snap_package[$package_index]}"
+            snap install "${snap_packages[$package_index]}"
         fi
     done
 }
