Add method to copy over vim directory

--- a/vim/install
+++ b/vim/install
@@ -4,6 +4,7 @@ function install_vim_packages {
 
     function prep_vim_environment {
         mkdir -p $HOME/.vim/undo
+        cp -r ./home/.vim/* $HOME/.vim/
     }
 
     function install_pathogen {
